--- a/podataka-lib/build.gradle
+++ b/podataka-lib/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 2
-        versionName "0.1b"
+        versionCode 3
+        versionName "0.2b"
     }
     buildTypes {
         release {
@@ -23,4 +23,4 @@ dependencies {
     compile 'junit:junit:4.12'
 }
 
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+//apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
