--- a/podataka-lib/build.gradle
+++ b/podataka-lib/build.gradle
@@ -23,4 +23,4 @@ dependencies {
     compile 'junit:junit:4.12'
 }
 
-//apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
