--- a/podataka-lib/build.gradle
+++ b/podataka-lib/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 24
-        versionCode 4
-        versionName "0.3b"
+        versionCode 5
+        versionName "0.4b"
     }
     buildTypes {
         release {
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'junit:junit:4.12'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
 
 apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
