--- a/podataka-lib/build.gradle
+++ b/podataka-lib/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
 }
 
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: 'maven-push.gradle'
+//apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
